fixup! Gradle build redesign